# OWL

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  example.cpp
docs/: Doxyfile
docs/html/: _o_w_l_8cpp.html  _o_w_l_8h.html  _o_w_l_8h_source.html  _r_e_a_d_m_e_8md.html  annotated.html  class_o_w_l_1_1_array_x_d-members.html  class_o_w_l_1_1_array_x_d.html  class_o_w_l_1_1_empty_array_exception-members.html  class_o_w_l_1_1_empty_array_exception.html  class_o_w_l_1_1_size_mismatch_exception-members.html  class_o_w_l_1_1_size_mismatch_exception.html  classes.html  dir_056b48bdf75059d807eb3a3cfafc2d68.html  files.html  framework_8h.html  framework_8h_source.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  hierarchy.html  index.html  md__c__dev__o_w_l__o_w_l__r_e_a_d_m_e.html  menudata.js  namespace_o_w_l.html  namespacemembers.html  namespacemembers_func.html  namespaces.html  pages.html  pch_8cpp.html  pch_8h.html  pch_8h_source.html
docs/html/search/: all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  defines_0.js  files_0.js  files_1.js  files_2.js  functions_0.js  functions_1.js  functions_3.js  functions_4.js  functions_5.js  functions_6.js  functions_7.js  functions_8.js  functions_9.js  functions_a.js  functions_b.js  namespaces_0.js  pages_0.js  searchdata.js  variables_0.js
docs/latex/: _o_w_l_8cpp.tex  _o_w_l_8h.tex  _o_w_l_8h_source.tex  _r_e_a_d_m_e_8md.tex  annotated.tex  class_o_w_l_1_1_array_x_d.tex  class_o_w_l_1_1_empty_array_exception.eps  class_o_w_l_1_1_empty_array_exception.tex  class_o_w_l_1_1_size_mismatch_exception.eps  class_o_w_l_1_1_size_mismatch_exception.tex  dir_056b48bdf75059d807eb3a3cfafc2d68.tex  files.tex  framework_8h.tex  framework_8h_source.tex  hierarchy.tex  md__c__dev__o_w_l__o_w_l__r_e_a_d_m_e.tex  namespace_o_w_l.tex  namespaces.tex  pch_8cpp.tex  pch_8h.tex  pch_8h_source.tex  refman.tex
examples/: CMakeLists.txt  array_addition.cpp  diff.cpp  differentiation.cpp  first_order_finite_differences.cpp  linear_equation.cpp  linear_equations_2.cpp  matrix_multiplication.cpp  poisson_equation_1D.cpp  radial_diffusion.cpp  tridiagonal_matrix_multiplication.cpp
gtests/: CMakeLists.txt  test_ArrayXD.cpp  test_ArrayXD_operatoroverloads.cpp  test_MatrixXD.cpp  test_MatrixXD_operatorOverloads.cpp  test_customArrays.cpp  test_differential_equations.cpp  test_mathOperations.cpp  test_numerical_methods.cpp
python_benchmarks/: centered_finite_differences.py  differential_equations.py  diffusivity.py  finte_differences.py  poisson_equation_1D.py  poisson_equation_1D_2.py
python_benchmarks/scripts/: radial_diffusion.py
src/: CMakeLists.txt  OWL.cpp  OWL.h  differential_equations.cpp  differential_equations.h  linalg.cpp  linalg.h  numerical_methods.cpp  numerical_methods.h
