add_executable(array_addition array_addition.cpp)
target_link_libraries(array_addition owl)

add_executable(matrix_multiplication matrix_multiplication.cpp)
target_link_libraries(matrix_multiplication owl)

add_executable(differentiation differentiation.cpp)
target_link_libraries(differentiation owl)

add_executable(linear_equation linear_equation.cpp)
target_link_libraries(linear_equation linalg)
